--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
 body{
     background-color: darkcyan;
 }
+
+.answer{
+    //display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    width: 150px;
+    display: block;
+}
