Split answers array into correct and wrong answers, restructured, added css classes for right and wrong answer

--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,11 @@ body{
     width: 150px;
     display: block;
 }
+
+.correct{
+    background-color: chartreuse;
+}
+
+.wrong{
+    background-color: red;
+}
