--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,73 @@
 body{
-    background-color: darkcyan;
+    background-color: rgb(4, 103, 103);
+}
+
+.correct{
+    background-color: rgb(134, 236, 32);
+}
+
+.wrong{
+    background-color: rgb(239, 16, 16);
 }
 
 .answer{
     //display: inline-block;
     font-size: 16px;
     cursor: pointer;
-    width: 150px;
+    width: 100%;
     display: block;
+    padding: 16px 32px;
+    text-align: center;
+    border-radius: 4px;
+    background-color: rgba(250, 250, 250, 0.5);
+    color: black;
+    border: 2px solid #555555;
+    -webkit-transition-duration: 0.9s; /* Safari */
+    transition-duration: 0.9s;
 }
 
-.correct{
-    background-color: chartreuse;
+.answer:hover {
+    background-color: #555555;
+    color: white;
+    cursor: pointer;
 }
 
-.wrong{
-    background-color: red;
+h2{
+    font-family: "Sitka Display";
+    color:rgb(245, 204, 7);
+    text-align: center;
+}
+
+h3{
+    text-align: center;
+    width: 100%;
+    color: rgb(228, 150, 75);
+}
+
+h4{
+    font-family: "Sitka Text";
+    color:rgb(245, 204, 7);
+    text-align: center;
+
+}
+
+#numberOfQuestions{
+    padding: 5px;
+    margin: 5px;
+    border-radius:5px;
+}
+
+#level{
+    padding: 5px;
+    margin: 5px;
+    border-radius:5px;
+}
+
+progress{
+    padding: 40px;
+    width: 250px;
+    height: 20px;
+    background-color: #eee;
+    border-radius: 2px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
 }
