--- a/css/style3.css
+++ b/css/style3.css
@@ -1,9 +1,9 @@
-* {
-    box-sizing: border-box;
-}
+
 
 body{
-    background-color: rgb(4, 103, 103);
+    background-color: #504d4b;
+
+
 }
 
 .correct{
@@ -15,14 +15,12 @@ body{
 }
 
 .answer{
-    //display: inline-block;
     font-size: 16px;
     cursor: pointer;
     width: 100%;
-    display: block;
     padding: 16px 32px;
     text-align: center;
-    border-radius: 4px;
+    border-radius: 5px;
     background-color: rgba(250, 250, 250, 0.5);
     color: black;
     border: 2px solid #555555;
@@ -36,15 +34,61 @@ body{
     cursor: pointer;
 }
 
-@media screen and (max-width: 600px) {
+#answers{
+    grid-area: 5/1/9/4;
+}
+
+@media (25em <= width <= 50em) {
     .column {
         width: 100%;
         display: block;
-        margin-bottom: 16px;
+        margin-bottom: 1em;
+    }
+
+    body{
+        background-color: #2b1f80
+    }
+    header{
+            font-size:4vw;
+    }
+}
+
+@media screen and (min-width: 50em){
+
+    body{
+    background-color: rgb(4, 103, 103);
+    display: grid;
+    grid-template-rows: repeat(8, 11vh);
+    grid-template-columns: 9em auto 9em;
+    }
+    #numberOfQuestions{
+        height: 40%;
     }
     #level{
-        float: right;
+        height: 20em;
     }
+    #startbutton{
+        width: 70%;
+        text-align: center;
+    }
+    .column {
+        width: 19em;
+        display:inline-block;
+        float: left;
+    }
+    footer{
+        justify-self: center;
+    }
+}
+
+.column {
+        margin: 1em;
+    }
+
+
+header{
+    grid-row: 2/4;
+    grid-column: 2/3;
 }
 
 h2{
@@ -54,6 +98,7 @@ h2{
 }
 
 h3{
+    align-items: end;
     font-family: "Sitka Display", solid;
     text-align: center;
     width: 100%;
@@ -64,10 +109,12 @@ h4{
     font-family: "Sitka Text";
     color: rgb(197, 167, 138);
     text-align: center;
-
 }
 
 #numberOfQuestions{
+    height: 50%;
+    grid-row: 4/5;
+    grid-column: 1/2;
     padding: 5px;
     margin: 5px;
     border-radius:5px;
@@ -75,11 +122,15 @@ h4{
 }
 
 #level{
+    height:50%;
+    grid-row: 4/5;
+    grid-column: 3/4;
     float: inherit;
     padding: 5px;
     margin: 5px;
     border-radius:5px;
     background-color: rgb(197, 167, 138);
+
 }
 
 progress{
@@ -89,10 +140,11 @@ progress{
     height: 15px;
     background-color: #eee;
     border-radius: 2px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+    box-shadow: 20 25px 51px rgba(0, 0, 0, 0.25) inset;
 }
 
 #startbutton{
+    grid-area: 1/1/2/2;
     color: ivory;
     background-color: rgba(233, 95, 7, 0.8);
     margin: 1em;
@@ -107,4 +159,8 @@ progress{
     background-color: #edc7a4;
     color: #2f4aa4;
     cursor: pointer;
+}
+
+footer{
+    grid-area: 8/2/9/3;
 }
